fix the gap ....

--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 
 .All_container {
 
-    padding: 50px 100px 100px 100px;
+    padding: 50px 100px 100px 200px;
     height: 730px;
 
 }
